@@ -4,12 +4,12 @@ import com.mojang.datafixers.util.Pair;
 import net.minecraft.block.entity.BannerBlockEntity;
 import net.minecraft.block.entity.BannerPattern;
 import net.minecraft.item.BannerItem;
-import net.minecraft.item.BlockItem;
 import net.minecraft.item.ItemStack;
 import net.minecraft.nbt.NbtCompound;
 import net.minecraft.nbt.NbtList;
 import net.minecraft.util.DyeColor;
 
+import java.util.Collections;
 import java.util.List;
 
 public class Utils {
@@ -29,13 +29,13 @@ public class Utils {
     public static List<Pair<BannerPattern, DyeColor>> parseBannerItem(ItemStack banner) {
         DyeColor baseColor = ((BannerItem)banner.getItem()).getColor();
 
-        NbtCompound nbtCompound = BlockItem.getBlockEntityNbt(banner);
+        NbtCompound nbtCompound = banner.getOrCreateSubTag("BlockEntityTag");
         if (nbtCompound == null || !nbtCompound.contains("Patterns")) {
-            return List.of(Pair.of(BannerPattern.BASE, baseColor));
+            return Collections.singletonList(Pair.of(BannerPattern.BASE, baseColor));
         }
 
         NbtList nbtList = nbtCompound.getList("Patterns", 10);
 
-        return BannerBlockEntity.getPatternsFromNbt(baseColor, nbtList);
+        return BannerBlockEntity.method_24280(baseColor, nbtList);
     }
 }
